# one-listen

./: LICENSE  README.md  app.config.ts  app.vue  next.config.mjs  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
components/: PlayerBar.vue  TitleBar.vue
composables/: Greet.ts
layouts/: default.vue
pages/: about.vue  index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/netease/: macros.rs  mod.rs
src/app/: PlayerBar.tsx  greet.tsx  layout.tsx  page.tsx
