[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["jiahao xiang"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [
    "http-request",
    "window-all",
    "shell-open",
] }

reqwest = { version = "0.12.5", features = ["json"] }
base64 = "0.22.1"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
urlqstring = "0.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
